--- a/your-code/challenge-1.ipynb
+++ b/your-code/challenge-1.ipynb
@@ -66,20 +66,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def clean_up(s):\n",
-    "    \"\"\"\n",
-    "    Cleans up numbers, URLs, and special characters from a string.\n",
-    "\n",
-    "    Args:\n",
-    "        s: The string to be cleaned up.\n",
-    "\n",
-    "    Returns:\n",
-    "        A string that has been cleaned up.\n",
-    "    \"\"\""
+    "import pandas as pd\n",
+    "import nltk\n",
+    "from nltk.stem import WordNetLemmatizer \n",
+    "from nltk.corpus import stopwords\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from nltk.tokenize import sent_tokenize\n",
+    "from nltk.stem import PorterStemmer\n",
+    "from nltk.corpus import wordnet\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from nltk.tokenize import word_tokenize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ironhack', 's', 'q', 'website', 'is']"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = \"\"\"@Ironhack's-#Q website 776-is http://ironhack.com [(2018)]\")\"\"\"\n",
+    "import re\n",
+    "def clean_up(text_clean):\n",
+    "    text_clean = re.sub(r'(https|http)?:\\/\\/(\\w|\\.|\\/|\\?|\\=|\\&|\\%)*\\b', ' ', text_clean, flags=re.MULTILINE)\n",
+    "    text_clean = re.findall('\\w+',  text_clean)\n",
+    "    text_clean = [word.lower() for word in text_clean if word.isalpha()]\n",
+    "    return(text_clean)\n",
+    "clean_up(text)"
    ]
   },
   {
@@ -101,20 +128,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ironhack', 's', 'q', 'website', 'is']"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def tokenize(s):\n",
-    "    \"\"\"\n",
-    "    Tokenize a string.\n",
+    "text_2 = 'ironhack s  q website  is'\n",
+    "def tokenize(text):\n",
+    "    tokens = word_tokenize(text)\n",
+    "    return tokens\n",
     "\n",
-    "    Args:\n",
-    "        s: String to be tokenized.\n",
-    "\n",
-    "    Returns:\n",
-    "        A list of words as the result of tokenization.\n",
-    "    \"\"\""
+    "tokenize(text_2)"
    ]
   },
   {
@@ -145,20 +179,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "def stem_and_lemmatize(l):\n",
-    "    \"\"\"\n",
-    "    Perform stemming and lemmatization on a list of words.\n",
-    "\n",
-    "    Args:\n",
-    "        l: A list of strings.\n",
-    "\n",
-    "    Returns:\n",
-    "        A list of strings after being stemmed and lemmatized.\n",
-    "    \"\"\""
+    "    return [lemmatizer.lemmatize(word,get_wordnet_pos(word)) for word in l]\n"
    ]
   },
   {
@@ -176,20 +202,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "def remove_stopwords(l):\n",
-    "    \"\"\"\n",
-    "    Remove English stopwords from a list of strings.\n",
-    "\n",
-    "    Args:\n",
-    "        l: A list of strings.\n",
-    "\n",
-    "    Returns:\n",
-    "        A list of strings after stop words are removed.\n",
-    "    \"\"\""
+    "    return list(set(l).difference(stopwords.words()))\n"
    ]
   },
   {
@@ -218,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
